@@ -10,6 +10,7 @@ Designer 2.14.0 (2012-08-XX Markab)
    - LPD protocol support (MODELER-406)
    - contentType attribute on HTTP protocol (MODELER-416)
    - Have protocol names ordered alphabetically for commands (MODELER-417)
+   - Add pulseTime parameter to AMX protocol (MODELER-434)
 
  Fixes:
 
